# gerenciador-tarefas-academicas

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
scripts/: notificar.py
site/: index.html  pytest-theme.css
src/: gerenciador.py
tests/: conftest.py  test_gerenciador.py
